--- a/app/html/about.html
+++ b/app/html/about.html
@@ -1,16 +1,97 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <title>About me</title>
-        <link rel="stylesheet" href="/app/css/style.css"/>
-        <script src="../js/script.js" defer></script>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta charset="UTF-8" />
-    </head>
+<head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400;600;700&display=swap" rel="stylesheet">
+    <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script type="module" src="./main.js"></script>
+    <title>About me</title>
+</head>
+<body>
 
-    <body>
+    <header>
+        <div class="logo-container">
+            <img src="../images/logo.png" alt="logo">
+            <h2>My learning journal</h2>
+        </div>
         <nav id="navbar"></nav>
-        <!-- Content page here -->
-        <footer id="footer"></footer>
-    </body>
-</html> 
+    </header>
+
+    <div class="wrapper">
+        <article class="about-me-article">
+            <div class="about-me-container">
+                <img src="../images/me.jpg" alt="subject pic-profile">
+                <h1 class="about-me-title">
+                    Hi there! My name is Andrea and welcome to my learning journal.
+                </h1>
+                <p>
+                    After several months of learning in the Frontend Developer Career Path,
+                    I've made the big jump over to the Bootcamp to get expert code reviews of my Solo Projects
+                    projects and meet like-minded peers.
+                </p>
+            </div>
+
+            <div>
+                <h3 class="article-title"><strong>How I stay committed to learning</strong></h3>
+                <p>I like to think of myself as a lifelong learner.
+                    I used to spend hours and hours learning, then try to create simple projects 
+                    using what I learned or work new techniques into existing projects.
+                </p>
+                <p>
+                    While that was fun, I felt like it would be helpful to share what I was learning
+                    and most things about my journey with the world.
+                </p>    
+                <h3 class="article-title"><strong>How I got started</strong></h3>
+                <p>
+                    I started simple and gradually grew my learning journal site. 
+                    I would take notes about what I was learning. After each learning session, 
+                    I'd use my notes to not only reflect on what 
+                    I learned but also write short summaries of what I learned using my own words.
+                </p>
+                <p>
+                    That helped me grok what I was learning, 
+                    and I realized that posting my learning summaries was also helping others 
+                    learn and stay motivated.
+                </p>
+            </div>
+        </article>
+        <span class="recent-posts">Recent Posts</span>
+
+        <section class="blog-grid" id="recent-post-el">
+            <div class="blog">
+                <img src="../images/article-image.png" alt="laptop computer picture" class="blog-img">
+                <span class="blog-date">July 23, 2022</span>
+                <h1 class="blog-title">Blog One</h1>
+                <p class="blog-article-preview">
+                    I'm excited to start a new learning journey as a Scrimba Bootcamp student!
+                    After several months of learning in the Frontend Developer Career Path.
+                </p>
+            </div>
+            <div class="blog">
+                <img src="../images/article-image.png" alt="laptop computer picture" class="blog-img">
+                <span class="blog-date">July 23, 2022</span>
+                <h1 class="blog-title">Blog One</h1>
+                <p class="blog-article-preview">
+                    I'm excited to start a new learning journey as a Scrimba Bootcamp student!
+                    After several months of learning in the Frontend Developer Career Path.
+                </p>
+            </div>
+            <div class="blog">
+                <img src="../images/article-image.png" alt="laptop computer picture" class="blog-img">
+                <span class="blog-date">July 23, 2022</span>
+                <h1 class="blog-title">Blog One</h1>
+                <p class="blog-article-preview">
+                    I'm excited to start a new learning journey as a Scrimba Bootcamp student!
+                    After several months of learning in the Frontend Developer Career Path.
+                </p>
+            </div>
+        </section>
+    </div>
+    <footer id="footer"></footer>
+</body>
+</html>
