--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,14 @@
         <img src="./images/logo.png" alt="logo">
         <h2>My learning journal</h2>
       </div>
-      <nav id="navbar"></nav>
+      <div id="nav-el" class="nav-items">
+        <a class="nav-item" href="../index.html">Home</a>
+        <a class="nav-item" href="../html/about.html">About me</a>       
+      </div>
+      <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+      <a href="javascript:void(0);" class="icon" onclick="toggleMenu()">
+        <i class="fa fa-bars"></i>
+      </a>
     </header>
 
     <a href="../html/featured-post.html">
